Modified Sudoku Puzzle (Still not working)

--- a/extras/Math.ipynb
+++ b/extras/Math.ipynb
@@ -182,6 +182,7 @@
     "    return r\n",
     "def enumerateNonintersectingSetCombinations(setlist,intersectfn=lambda s1,s2: len(s1.intersection(s2))!=0):\n",
     "    if len(setlist)==1: return [setlist,[]]\n",
+    "    elif len(setlist)==0: return [[]]\n",
     "    ret=[]\n",
     "    fset=setlist[0]\n",
     "    for c in enumerateNonintersectingSetCombinations(setlist[1:],intersectfn):\n",
