--- a/extras/Puzzles.ipynb
+++ b/extras/Puzzles.ipynb
@@ -23,20 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "db4c8dff",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Sudoku:\n",
-    "    def __init__(self,blocksize=3): #Board size = blocksize*blocksize x blocksize*blocksize\n",
+    "    def __init__(self,blocksize=3,autoinit=True): #Board size = blocksize*blocksize x blocksize*blocksize\n",
     "        self.blocksize=blocksize\n",
     "        maxval=int(blocksize**2)\n",
     "        self.maxval=maxval\n",
     "        self.grid=np.zeros((maxval,maxval))\n",
-    "        self.initGrid()\n",
+    "        if autoinit: self.initGrid()\n",
     "    \n",
-    "    def initGrid(self):\n",
+    "    def initGrid(self,iterlim=50,tries=100):\n",
+    "        #print(\"Tries left\",tries)\n",
+    "        if tries<=0: return False\n",
     "        blocks=[]\n",
     "        for i in range(0,self.maxval,self.blocksize):\n",
     "            blocks.append([])\n",
@@ -44,7 +46,8 @@
     "                ch=np.array(range(self.maxval))+1; np.random.shuffle(ch)\n",
     "                ch=ch.reshape((self.blocksize,self.blocksize))\n",
     "                \n",
-    "                k=j//self.blocksize\n",
+    "                k=j//self.blocksize #j//self.blocksize\n",
+    "                #print(i,j,\"as focal block coordinates\")\n",
     "                hblks=[]\n",
     "                for myblock in blocks[-1]: hblks.append(myblock)\n",
     "                self.solveHorizontal(ch,hblks)\n",
@@ -54,18 +57,30 @@
     "                    myblock=blocks[blkid][k]\n",
     "                    #print(\"My block\",myblock,\"with ID\",blkid)\n",
     "                    vblks.append(myblock)\n",
-    "                ch=self.solveVertical(ch,vblks)\n",
-    "                self.solveHorizontal(ch,hblks)\n",
-    "                ch=self.solveVertical(ch,vblks)\n",
-    "                self.solveHorizontal(ch,hblks)\n",
-    "                \n",
+    "                #print(ch,vblks,k)\n",
+    "                converged=False\n",
+    "                Kit=0\n",
+    "                succ=True\n",
+    "                while not converged:\n",
+    "                    ch,c1=self.solveVertical(ch,vblks)\n",
+    "                    c2=self.solveHorizontal(ch,hblks)\n",
+    "                    converged=(c1 and c2)\n",
+    "                    Kit+=1\n",
+    "                    #print(Kit,\"iterations\")\n",
+    "                    if Kit>iterlim:\n",
+    "                        succ=False\n",
+    "                        break\n",
+    "                if not succ: return self.initGrid(iterlim,tries-1)\n",
     "                blocks[-1].append(ch)\n",
     "                self.grid[i:i+self.blocksize,j:j+self.blocksize]=ch\n",
     "        return blocks\n",
     "    \n",
-    "    def solveHorizontal(self,focal,blocks):\n",
-    "        if not len(blocks): return\n",
+    "    def solveHorizontal(self,focal,blocks,tag=True):\n",
+    "        if not len(blocks): return True\n",
+    "        #if tag: print(\"Solve Horizontal\")\n",
+    "        swaps=dict()\n",
     "        swapped=True\n",
+    "        singleswap=False\n",
     "        while swapped:\n",
     "            swapped=False\n",
     "            for rowid in range(self.blocksize):\n",
@@ -91,18 +106,30 @@
     "                        while (tv in excl) and K<self.blocksize*2:\n",
     "                            nrid=np.random.choice(noclash)\n",
     "                            ncid=int(np.random.uniform(0,self.blocksize))\n",
+    "                            if ((rowid,colid) in swaps) and (nrid,ncid) in swaps[(rowid,colid)]: continue\n",
     "                            tv=focal[nrid][ncid]\n",
     "                            K+=1\n",
     "                        focal[rowid][colid],focal[nrid][ncid]=focal[nrid][ncid],focal[rowid][colid]\n",
+    "                        #print(\"\\tSwapped:\",rowid,colid,\"with\",nrid,ncid)\n",
+    "                        if (rowid,colid) in swaps:\n",
+    "                            swaps[(rowid,colid)].append((nrid,ncid))\n",
+    "                        else:\n",
+    "                            swaps[(rowid,colid)]=[(nrid,ncid)]\n",
     "                        swapped=True\n",
+    "                        singleswap=True\n",
+    "            #if not singleswap: print(focal,blocks)\n",
+    "            return (not singleswap) #Converged?\n",
     "    \n",
     "    def solveVertical(self,focal,blocks):\n",
-    "        print(\"Solve vertical\")\n",
+    "        #print(\"Solve vertical\")\n",
     "        focalX=focal.transpose()\n",
     "        nblocks=[blk.transpose() for blk in blocks]\n",
-    "        self.solveHorizontal(focalX,nblocks)\n",
+    "        #print(focalX,nblocks)\n",
+    "        ret=self.solveHorizontal(focalX,nblocks,tag=False)\n",
     "        focal=focalX.transpose()\n",
-    "        return focal"
+    "        return focal,ret\n",
+    "    def __str__(self): return str(self.grid)\n",
+    "    def __rep__(self): return str(self)"
    ]
   },
   {
@@ -157,9 +184,9 @@
     }
    ],
    "source": [
-    "sud=Sudoku()\n",
-    "print(sud.grid)\n",
-    "np.sum(sud.grid,axis=1),np.sum(sud.grid,axis=0)"
+    "#sud=Sudoku()\n",
+    "#print(sud.grid)\n",
+    "#np.sum(sud.grid,axis=1),np.sum(sud.grid,axis=0)"
    ]
   }
  ],
