Added RNA folding algorithms using pyrosetta

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -24,8 +24,21 @@
    ],
    "source": [
     "import pyrosetta\n",
+    "from pyrosetta import init, rosetta\n",
+    "from pyrosetta.rosetta import core\n",
+    "from pyrosetta.rosetta.core.import_pose import pose_from_file\n",
+    "from pyrosetta.rosetta.core.io.pdb import dump_pdb\n",
+    "from pyrosetta.rosetta.core.io.pdb import add_to_multimodel_pdb\n",
+    "from pyrosetta.rosetta.core.chemical import VariantType\n",
+    "from pyrosetta.io import poses_from_silent\n",
+    "from pyrosetta.rosetta.protocols.rna.denovo import RNA_DeNovoProtocol\n",
+    "pyrosetta.init(\"-mute all -out:level 0\")\n",
+    "\n",
     "import numpy as np\n",
-    "pyrosetta.init(\"-mute all -out:level 0\")"
+    "import tempfile\n",
+    "import os\n",
+    "class Arguments:\n",
+    "    def __init__(self): pass"
    ]
   },
   {
@@ -68,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c52b8b51-d2dc-4cc7-946a-462a545856d6",
    "metadata": {},
    "outputs": [],
@@ -109,39 +122,6 @@
     "        conform=self.conformation()\n",
     "        pass_param=[self.get_atom(rid,ai) for ai in args]\n",
     "        return getattr(conform,par)(*pass_param)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4fb0f490-ac3b-40d8-9211-0a7a20f184f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq=\"caacaacaacaa\"\n",
-    "rna_seq = pyrosetta.rosetta.utility.vector1_std_string()\n",
-    "rna_seq.append(seq)\n",
-    "setup=pyrosetta.rosetta.core.import_pose.RNA_DeNovoSetup()\n",
-    "setup.set_sequence_strings(rna_seq)\n",
-    "setup.set_minimize_rna(True)\n",
-    "setup.set_silent_file(\"/home/venkata/dump.rta\")\n",
-    "\n",
-    "opts=setup.options()\n",
-    "opts.set_nstruct(10)\n",
-    "\n",
-    "protocol = pyrosetta.rosetta.protocols.rna.denovo.RNA_DeNovoProtocol(opts, setup.rna_params())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c67dcc49-8bcc-4844-b56d-3d7dbc462012",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "startpose=get_template_pose(seq)\n",
-    "setup.set_native_pose(startpose)\n",
-    "#protocol.apply(startpose)"
    ]
   }
  ],
