Added iterator to LoadedPDB object

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -88,8 +88,12 @@
    "source": [
     "class LoadedPDB(pyrosetta.rosetta.core.pose.Pose):\n",
     "    def __init__(self,filename):\n",
-    "        pose=pyrosetta.pose_from_pdb(filename)\n",
+    "        if type(filename)==rosetta.core.pose.Pose:\n",
+    "            pose=filename\n",
+    "        else:\n",
+    "            pose=pyrosetta.pose_from_pdb(filename)\n",
     "        super(LoadedPDB,self).__init__(pose)\n",
+    "        #self.current_residue=0\n",
     "\n",
     "    def __call__(self,chn=None,idx=None):\n",
     "        if chn is None: return self\n",
@@ -121,7 +125,16 @@
     "    def get_conformation_parameter(self,rid,par=\"bond_length\",*args):\n",
     "        conform=self.conformation()\n",
     "        pass_param=[self.get_atom(rid,ai) for ai in args]\n",
-    "        return getattr(conform,par)(*pass_param)"
+    "        return getattr(conform,par)(*pass_param)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.current_residue=0\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        self.current_residue+=1\n",
+    "        if self.current_residue>len(self): raise StopIteration()\n",
+    "        else: return self.residue(self.current_residue)\n",
+    "    def clone_pose(self): return pyrosetta.rosetta.core.pose.Pose(self)"
    ]
   }
  ],
