Added RMSD calculation and coordinate export to pytorch from pyrosetta poses

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -136,6 +136,101 @@
     "        else: return self.residue(self.current_residue)\n",
     "    def clone_pose(self): return pyrosetta.rosetta.core.pose.Pose(self)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba5af45c-2c26-4c48-b96a-aea5988941c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "DEVICE=torch.device(\"cpu\")\n",
+    "TORCH_FLOAT=torch.float32\n",
+    "def assign_pose_by_pt(pose,pt_pose):\n",
+    "    # Pose must be LoadedPDB object\n",
+    "    pose_np=pt_pose.detach().cpu().numpy()\n",
+    "    N=0\n",
+    "    for i in range(len(pose.sequence())):\n",
+    "        for atidx,atom in enumerate(pose.residue(i+1).atoms()):\n",
+    "            mycrd=rosetta.numeric.xyzVector_double_t(pose_np[N,0],pose_np[N,1],pose_np[N,2])\n",
+    "            pose.residue(i+1).set_xyz(atidx+1,mycrd)\n",
+    "            #atom.xyz(mycrd)\n",
+    "            #print(atom.xyz())\n",
+    "            N+=1\n",
+    "    return pose\n",
+    "def get_torch_rep(pose):\n",
+    "    if type(pose)==rosetta.core.pose.Pose: pose=LoadedPDB(pose)\n",
+    "    vecs=[]\n",
+    "    for res in pose:\n",
+    "        for atom in res.atoms():\n",
+    "            vecs.append(np.array(atom.xyz()))\n",
+    "    return torch.tensor(np.stack(vecs),dtype=TORCH_FLOAT,device=DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ecc706f-5473-45d8-9786-4e091ece104f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def align_poses(ref_struct,pose_struct,max_iter=5000,step_size=1e-1,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200):\n",
+    "    ref=get_torch_rep(ref_struct)\n",
+    "    pose=get_torch_rep(pose_struct)\n",
+    "    pose.requires_grad_(False)\n",
+    "    ref_origin=torch.sum(ref,dim=0)/len(ref)\n",
+    "    pose_origin=torch.sum(pose,dim=0)/len(ref)\n",
+    "    delta=ref_origin-pose_origin\n",
+    "    pose+=delta\n",
+    "    \n",
+    "    ref.requires_grad_(False)\n",
+    "    pose.requires_grad_(True)\n",
+    "    for it in range(max_iter):\n",
+    "        with torch.no_grad():\n",
+    "            pose_origin=torch.sum(pose,dim=0)/len(ref)\n",
+    "            r_pose=pose-pose_origin\n",
+    "        loss=metric(ref,pose)\n",
+    "        loss.backward()\n",
+    "\n",
+    "        #with torch.no_grad(): pose=pose-pose.grad*step_size\n",
+    "        translation=torch.sum(pose.grad,dim=0)/len(pose)\n",
+    "        rotation=torch.sum(torch.cross(r_pose,pose.grad),dim=0)/len(pose)\n",
+    "        rotation_mag=torch.sqrt(torch.sum(rotation**2))\n",
+    "        rotation_norm=rotation/rotation_mag\n",
+    "        \n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            rotation_norm=rotation/torch.sqrt(torch.sum(rotation**2))\n",
+    "            pose_del=-translation*step_size\n",
+    "            pose_proj=torch.sum(r_pose*rotation_norm,dim=-1)\n",
+    "            pose_orth=r_pose-pose_proj[:,np.newaxis]*rotation_norm\n",
+    "            x_basis=pose_orth[0]\n",
+    "            x_basis/=torch.sqrt(torch.sum(x_basis**2))\n",
+    "            y_basis=torch.cross(rotation_norm,x_basis)\n",
+    "            #print(torch.sum(x_basis**2),torch.sum(y_basis**2),torch.sum(x_basis*y_basis))\n",
+    "            x_proj=torch.sum(r_pose*x_basis,dim=-1)\n",
+    "            y_proj=torch.sum(r_pose*y_basis,dim=-1)\n",
+    "\n",
+    "            angle=rotation_mag*step_size\n",
+    "            #print(\"Angle:\",angle)\n",
+    "            pose_x=x_proj*np.cos(angle)+y_proj*np.sin(angle)\n",
+    "            pose_y=y_proj*np.cos(angle)-x_proj*np.sin(angle)\n",
+    "            pose_z=pose_proj\n",
+    "\n",
+    "            pose=torch.mm(pose_x.unsqueeze(1),x_basis.unsqueeze(0))+torch.mm(pose_y.unsqueeze(1),y_basis.unsqueeze(0))+torch.mm(pose_z.unsqueeze(1),rotation_norm.unsqueeze(0))+pose_origin+pose_del\n",
+    "        \n",
+    "        pose.requires_grad_(True)\n",
+    "        #with torch.no_grad(): pose-=pose.grad*step_size\n",
+    "        if (not silent) and (it%printevery==0): print(it,loss.item())\n",
+    "    pose.requires_grad_(False)\n",
+    "    aligned_pose=pose_struct.clone()\n",
+    "    assign_pose_by_pt(aligned_pose,pose)\n",
+    "    return aligned_pose"
+   ]
   }
  ],
  "metadata": {
