Added GVector calculation (as per baRNAba) and the option to ignore Hydrogens with computing RMSD (Needs validation)

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -34,6 +34,8 @@
     "from pyrosetta.rosetta.protocols.rna.denovo import RNA_DeNovoProtocol\n",
     "pyrosetta.init(\"-mute all -out:level 0\")\n",
     "\n",
+    "import barnaba\n",
+    "\n",
     "import numpy as np\n",
     "import tempfile\n",
     "import os\n",
@@ -134,7 +136,79 @@
     "        self.current_residue+=1\n",
     "        if self.current_residue>len(self): raise StopIteration()\n",
     "        else: return self.residue(self.current_residue)\n",
-    "    def clone_pose(self): return pyrosetta.rosetta.core.pose.Pose(self)"
+    "    def clone_pose(self): return pyrosetta.rosetta.core.pose.Pose(self)\n",
+    "    def hydrogen_indices(self):\n",
+    "        ret=[]\n",
+    "        N=0\n",
+    "        for rid in range(len(self)):\n",
+    "            res=self.residue(rid+1)\n",
+    "            for i,atom in enumerate(res.atoms()):\n",
+    "                if res.atom_is_hydrogen(i+1): ret.append(N)\n",
+    "                N+=1\n",
+    "        return np.array(ret)\n",
+    "\n",
+    "    def generate_gmat_coords(self):\n",
+    "        ret=[]\n",
+    "        for rid in range(len(self)):\n",
+    "            res=self.residue(rid+1)\n",
+    "            vecs=[]\n",
+    "            if res.name1() in ['c','u','t']:\n",
+    "                vecs.append(np.array(res.atom(\"C2\").xyz()))\n",
+    "                vecs.append(np.array(res.atom(\"C4\").xyz()))\n",
+    "                vecs.append(np.array(res.atom(\"C6\").xyz()))\n",
+    "            else:\n",
+    "                vecs.append(np.array(res.atom(\"C2\").xyz()))\n",
+    "                vecs.append(np.array(res.atom(\"C6\").xyz()))\n",
+    "                vecs.append(np.array(res.atom(\"C4\").xyz()))\n",
+    "            ret.append(vecs)\n",
+    "        return np.array(ret).transpose((1,0,2))\n",
+    "            \n",
+    "    def get_gmat(self,cutoff=24):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Pulled from baRNAba: https://github.com/srnas/barnaba\n",
+    "        Calculate G-vectors for each pair of bases within ellipsoidal cutoff distance \n",
+    "    \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        coords : (3,n,3) numpy array \n",
+    "            (3,n,3) numpy array with positions of C2,C4 and C6 atoms for pyrimidines (C,U,T) and C2,C6,C4 for purines (A,G) (axis 0) relative to n nucleobases (axis 1). xyz coordinates in axis 2.\n",
+    "    \n",
+    "        cutoff : float\n",
+    "            ellipsoidal cutoff\n",
+    "        \n",
+    "        Returns\n",
+    "        -------\n",
+    "        dotp : (n,n,4) numpy array\n",
+    "            G coordinates for each pair. For pairs outside the cutoff the coordinates are (0,0,0,0)\n",
+    "        \"\"\"\n",
+    "        coords=self.generate_gmat_coords()\n",
+    "    \n",
+    "        ll = coords.shape[1]\n",
+    "    \n",
+    "        mat = np.zeros((ll,ll,4))\n",
+    "        \n",
+    "        dotp,m_idx = barnaba.calc_mats.calc_3dmat(coords,cutoff)\n",
+    "            \n",
+    "        # return zero matrix when there are no contacts\n",
+    "        if(dotp.shape[0]==0): return mat\n",
+    "        \n",
+    "        dotp *= np.array(barnaba.functions.definitions.scale)[np.newaxis,:]\n",
+    "        dotp_norm = np.sqrt(np.sum(dotp**2,axis=1))\n",
+    "        \n",
+    "        # calculate 4D g-vector\n",
+    "        ff = (np.pi*dotp_norm)/cutoff\n",
+    "        factor13 = np.sin(ff)/ff\n",
+    "        factor4= ((1.0+np.cos(ff))*cutoff)/np.pi\n",
+    "        gmat = dotp*factor13[:,np.newaxis]\n",
+    "        gmat = np.concatenate((gmat,factor4[:,np.newaxis]),axis=1)\n",
+    "        \n",
+    "        # set to zero when norm is larger than cutoff\n",
+    "        gmat[dotp_norm>cutoff] = 0.0\n",
+    "                \n",
+    "        mat[m_idx[:,0],m_idx[:,1]] = gmat\n",
+    "        \n",
+    "        return mat"
    ]
   },
   {
@@ -162,13 +236,28 @@
     "            #print(atom.xyz())\n",
     "            N+=1\n",
     "    return pose\n",
-    "def get_torch_rep(pose):\n",
+    "def get_torch_rep(pose,ignore_Hs=True,atom_selector=None):\n",
+    "    # Can include an atom selector. It expects 2 parameters - 1 residue object and 1 atom index (int) and outputs True (select) / False (don't select)\n",
     "    if type(pose)==rosetta.core.pose.Pose: pose=LoadedPDB(pose)\n",
     "    vecs=[]\n",
     "    for res in pose:\n",
-    "        for atom in res.atoms():\n",
+    "        for aidx,atom in enumerate(res.atoms()):\n",
+    "            if ignore_Hs and res.atom_is_hydrogen(aidx+1): continue\n",
+    "            if (atom_selector is not None) and (not atom_selector(res,aidx)): continue\n",
     "            vecs.append(np.array(atom.xyz()))\n",
     "    return torch.tensor(np.stack(vecs),dtype=TORCH_FLOAT,device=DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfc0b6b8-3213-47b1-ade8-c49a78a2a4f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hydrogen_indices(pose):\n",
+    "    if type(pose)==rosetta.core.pose.Pose: pose=LoadedPDB(pose)\n",
+    "    return pose.hydrogen_indices()"
    ]
   },
   {
@@ -178,9 +267,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def align_poses(ref_struct,pose_struct,max_iter=5000,step_size=1e-1,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200):\n",
-    "    ref=get_torch_rep(ref_struct)\n",
-    "    pose=get_torch_rep(pose_struct)\n",
+    "def align_poses(ref_struct,pose_struct,max_iter=6000,step_size=1e-1,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True):\n",
+    "    ref=get_torch_rep(ref_struct,ignore_Hs=False)\n",
+    "    pose=get_torch_rep(pose_struct,ignore_Hs=False)\n",
+    "\n",
+    "    selection=None\n",
+    "    if ignore_Hs:\n",
+    "        selection=torch.ones(len(pose),dtype=torch.bool)\n",
+    "        selection[hydrogen_indices(pose_struct)]=False\n",
+    "    \n",
     "    pose.requires_grad_(False)\n",
     "    ref_origin=torch.sum(ref,dim=0)/len(ref)\n",
     "    pose_origin=torch.sum(pose,dim=0)/len(ref)\n",
@@ -193,7 +288,9 @@
     "        with torch.no_grad():\n",
     "            pose_origin=torch.sum(pose,dim=0)/len(ref)\n",
     "            r_pose=pose-pose_origin\n",
-    "        loss=metric(ref,pose)\n",
+    "\n",
+    "        if selection is not None: loss=metric(ref[selection],pose[selection])\n",
+    "        else: loss=metric(ref,pose)\n",
     "        loss.backward()\n",
     "\n",
     "        #with torch.no_grad(): pose=pose-pose.grad*step_size\n",
