--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -138,15 +138,19 @@
     "        else: return self.residue(self.current_residue)\n",
     "    def clone_pose(self): return pyrosetta.rosetta.core.pose.Pose(self)\n",
     "    def hydrogen_indices(self):\n",
+    "        return self.matching_indices(lambda res,idx: res.atom_is_hydrogen(idx))\n",
+    "    \n",
+    "    def matching_indices(self,atom_selector):\n",
+    "        # Atom Selector expects 2 parameters - 1 residue object and 1 atom index (int) and outputs True (select) / False (don't select)\n",
     "        ret=[]\n",
     "        N=0\n",
     "        for rid in range(len(self)):\n",
     "            res=self.residue(rid+1)\n",
     "            for i,atom in enumerate(res.atoms()):\n",
-    "                if res.atom_is_hydrogen(i+1): ret.append(N)\n",
+    "                if atom_selector(res,i+1): ret.append(N)\n",
     "                N+=1\n",
     "        return np.array(ret)\n",
-    "\n",
+    "        \n",
     "    def generate_gmat_coords(self):\n",
     "        ret=[]\n",
     "        for rid in range(len(self)):\n",
@@ -243,7 +247,7 @@
     "    for res in pose:\n",
     "        for aidx,atom in enumerate(res.atoms()):\n",
     "            if ignore_Hs and res.atom_is_hydrogen(aidx+1): continue\n",
-    "            if (atom_selector is not None) and (not atom_selector(res,aidx)): continue\n",
+    "            if (atom_selector is not None) and (not atom_selector(res,aidx+1)): continue\n",
     "            vecs.append(np.array(atom.xyz()))\n",
     "    return torch.tensor(np.stack(vecs),dtype=TORCH_FLOAT,device=DEVICE)"
    ]
@@ -263,11 +267,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3f4d502-4a6b-4f41-985e-97851900da69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rmsd(pose1,pose2,atomwise=True,include_Hs=False):\n",
+    "    # If atomwise is false, it works residue-wise (Both methods are roughly equivalent as long as residues are of similar sizes)\n",
+    "    # Does NOT align the poses\n",
+    "    \n",
+    "    #pose1 and pose2 should be LoadedPDB objects\n",
+    "    if type(pose1)!=LoadedPDB: pose1=LoadedPDB(pose1)\n",
+    "    if type(pose2)!=LoadedPDB: pose2=LoadedPDB(pose2)\n",
+    "\n",
+    "    total_square_dev=0\n",
+    "    Ntot=0\n",
+    "    for i,r1 in enumerate(pose1):\n",
+    "        r2=pose2.residue(i+1)\n",
+    "        square_dev=0\n",
+    "        N=0\n",
+    "        for i,atom0 in enumerate(r1.atoms()):\n",
+    "            if (not include_Hs) and r1.atom_is_hydrogen(i+1):\n",
+    "                continue\n",
+    "            atom1=r2.atom(i+1)\n",
+    "            atomsd=(atom0.xyz()-atom1.xyz()).norm()**2\n",
+    "            square_dev+=atomsd\n",
+    "            N+=1\n",
+    "        \n",
+    "        if atomwise: Ntot+=N\n",
+    "        else:\n",
+    "            Ntot+=1\n",
+    "            square_dev/=N\n",
+    "        #print(square_dev)\n",
+    "        total_square_dev+=square_dev\n",
+    "    return np.sqrt(total_square_dev/Ntot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ecc706f-5473-45d8-9786-4e091ece104f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def align_poses(ref_struct,pose_struct,max_iter=6000,step_size=1e-1,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True):\n",
+    "def align_poses(ref_struct,pose_struct,max_iter=6000,step_size=1e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True):\n",
     "    ref=get_torch_rep(ref_struct,ignore_Hs=False)\n",
     "    pose=get_torch_rep(pose_struct,ignore_Hs=False)\n",
     "\n",
