Bug fixes to General

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -151,7 +151,7 @@
     "                N+=1\n",
     "        return np.array(ret)\n",
     "        \n",
-    "    def generate_gmat_coords(self):\n",
+    "    def generate_gmat_coords(self,skip_unnatural=True):\n",
     "        ret=[]\n",
     "        for rid in range(len(self)):\n",
     "            res=self.residue(rid+1)\n",
@@ -160,10 +160,11 @@
     "                vecs.append(np.array(res.atom(\"C2\").xyz()))\n",
     "                vecs.append(np.array(res.atom(\"C4\").xyz()))\n",
     "                vecs.append(np.array(res.atom(\"C6\").xyz()))\n",
-    "            else:\n",
+    "            elif (not skip_unnatural) or (res.name1() in ['a','g']):\n",
     "                vecs.append(np.array(res.atom(\"C2\").xyz()))\n",
     "                vecs.append(np.array(res.atom(\"C6\").xyz()))\n",
     "                vecs.append(np.array(res.atom(\"C4\").xyz()))\n",
+    "            else: continue\n",
     "            ret.append(vecs)\n",
     "        return np.array(ret).transpose((1,0,2))\n",
     "            \n",
