--- a/PyRosetta/RNAFolder.ipynb
+++ b/PyRosetta/RNAFolder.ipynb
@@ -80,43 +80,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "ac948078-3698-46c6-a133-3e272a533f52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_modeller_parameters=Arguments()\n",
-    "sample_modeller_parameters.sequence=\"<seq>\"\n",
-    "sample_modeller_parameters.output_silent_file=\"./rna_denovo.log\"\n",
-    "sample_modeller_parameters.output_pdb_file=\"./rna_denovo_output.pdb\"\n",
-    "sample_modeller_parameters.num_structs=8\n",
-    "sample_modeller_parameters.structs_per_job=4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "52a9fb3c-fbda-44c8-8f46-94225296ae50",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sample_modeller_parameters:\n",
-      "\t sequence: <seq>\n",
-      "\t output_silent_file: ./rna_denovo.log\n",
-      "\t output_pdb_file: ./rna_denovo_output.pdb\n",
-      "\t num_structs: 8\n",
-      "\t structs_per_job: 4\n"
+      "\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
+    "sample_modeller_parameters=Arguments()\n",
+    "sample_modeller_parameters.sequence=\"<seq>\"\n",
+    "sample_modeller_parameters.output_silent_file=\"./rna_denovo.log\"\n",
+    "sample_modeller_parameters.output_pdb_file=\"./rna_denovo_output.pdb\"\n",
+    "sample_modeller_parameters.num_structs=8\n",
+    "sample_modeller_parameters.structs_per_job=4\n",
+    "'''\n",
+    "print()\n",
+    "ANGLE_TYPES={1: \"alpha\", 2: \"beta\",3: \"gamma\",4: \"delta\",5: \"epsilon\",6: \"zeta\",7: \"chi\"}\n",
+    "ANGLE_STEPS={1: 22.5,2: 22.5,3: 22.5,4: 22.5,5: 22.5,6: 22.5,7: 11.25}\n",
+    "class Perturbation:\n",
+    "    def __init__(self,rid,angid,delang):\n",
+    "        self.residue_id=rid\n",
+    "        self.angle_type=angid\n",
+    "        self.delta_angle=delang\n",
+    "\n",
+    "    def apply(self,pose,inverse=False):\n",
+    "        if inverse: self.delta_angle*=-1\n",
+    "        type=ANGLE_TYPES[self.angle_type]\n",
+    "        fx=getattr(pose,type)\n",
+    "        set_fx=getattr(pose,\"set_\"+type)\n",
+    "        set_fx(self.residue_id,fx(self.residue_id)+self.delta_angle)\n",
+    "        if inverse: self.delta_angle*=-1\n",
+    "        return pose\n",
+    "\n",
+    "class PerturbationSequence:\n",
+    "    def __init__(self,seq=None):\n",
+    "        if seq: self.sequence=seq\n",
+    "        else: self.sequence=[]\n",
+    "\n",
+    "    def add_perturbation(self,p):\n",
+    "        self.sequence.append(p)\n",
+    "        \n",
+    "    def apply(self,pose,inverse=False):\n",
+    "        goal=range(len(self.sequence))\n",
+    "        if inverse: goal=range(len(self.sequence)-1,-1,-1)\n",
+    "        #print(goal)\n",
+    "\n",
+    "        for i in goal: pose=self.sequence[i].apply(pose,inverse=inverse)\n",
+    "        return pose\n",
+    "\n",
+    "    def __len__(self): return len(self.sequence)\n",
+    "\n",
+    "def generate_random_perturbations(pose,k=1):\n",
+    "    # pose is LoadedPDB object\n",
+    "    selids=(np.random.random((k,))*len(pose)).astype(int)+1\n",
+    "    seltypes=(np.random.random((k,))*len(ANGLE_TYPES)).astype(int)+1\n",
+    "    stds=[ANGLE_STEPS[atype] for atype in seltypes]\n",
+    "    selmags=np.random.normal(np.zeros(k),stds)\n",
+    "    return [Perturbation(selids[i],seltypes[i],selmags[i]) for i in range(len(selids))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "52a9fb3c-fbda-44c8-8f46-94225296ae50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
     "print(\"sample_modeller_parameters:\")\n",
     "samplemodeldict=sample_modeller_parameters.__dict__\n",
     "for k in samplemodeldict:\n",
-    "    print(\"\\t\",k+\":\",samplemodeldict[k])"
+    "    print(\"\\t\",k+\":\",samplemodeldict[k])\n",
+    "'''\n",
+    "pass"
    ]
   }
  ],
