Tuned align_pose hyperparameters to converge nicely

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -310,14 +310,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def align_poses(ref_struct,pose_struct,max_iter=6000,step_size=1e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True):\n",
+    "def align_poses(ref_struct,pose_struct,max_iter=12000,step_size=2e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True):\n",
     "    ref=get_torch_rep(ref_struct,ignore_Hs=False)\n",
     "    pose=get_torch_rep(pose_struct,ignore_Hs=False)\n",
     "\n",
     "    selection=None\n",
     "    if ignore_Hs:\n",
-    "        selection=torch.ones(len(pose),dtype=torch.bool)\n",
-    "        selection[hydrogen_indices(pose_struct)]=False\n",
+    "        selection_pose=torch.ones(len(pose),dtype=torch.bool)\n",
+    "        selection_pose[hydrogen_indices(pose_struct)]=False\n",
+    "        selection_ref=torch.ones(len(ref),dtype=torch.bool)\n",
+    "        selection_ref[hydrogen_indices(ref_struct)]=False\n",
+    "        selection=True\n",
     "    \n",
     "    pose.requires_grad_(False)\n",
     "    ref_origin=torch.sum(ref,dim=0)/len(ref)\n",
@@ -332,7 +335,7 @@
     "            pose_origin=torch.sum(pose,dim=0)/len(ref)\n",
     "            r_pose=pose-pose_origin\n",
     "\n",
-    "        if selection is not None: loss=metric(ref[selection],pose[selection])\n",
+    "        if selection is not None: loss=metric(ref[selection_ref],pose[selection_pose])\n",
     "        else: loss=metric(ref,pose)\n",
     "        loss.backward()\n",
     "\n",
