Added ways to sequence atoms directly and some quality-of-life improvements

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -124,6 +124,21 @@
     "        else:\n",
     "            residue=self.residue(rid)\n",
     "            return pyrosetta.AtomID(residue.atom_index(aid),rid)\n",
+    "    def get_atom_names(self,ignore_Hs=False,stripped=True):\n",
+    "        ret=[]\n",
+    "        for rid in range(len(self)):\n",
+    "            resid=self.residue(rid+1)\n",
+    "            for i,atom in enumerate(resid.atoms()):\n",
+    "                if ignore_Hs and resid.atom_name(i+1).strip()[0]=='H': continue\n",
+    "                ret.append(resid.atom_name(i+1).strip() if stripped else resid.atom_name(i+1))\n",
+    "        return np.array(ret,dtype=str)\n",
+    "    def get_atom_count(self):\n",
+    "        cnt=0\n",
+    "        for rid in range(len(self)):\n",
+    "            resid=self.residue(rid+1)\n",
+    "            cnt+=resid.natoms()\n",
+    "        return cnt\n",
+    "\n",
     "    def get_conformation_parameter(self,rid,par=\"bond_length\",*args):\n",
     "        conform=self.conformation()\n",
     "        pass_param=[self.get_atom(rid,ai) for ai in args]\n",
@@ -138,7 +153,9 @@
     "        else: return self.residue(self.current_residue)\n",
     "    def clone_pose(self): return pyrosetta.rosetta.core.pose.Pose(self)\n",
     "    def hydrogen_indices(self):\n",
-    "        return self.matching_indices(lambda res,idx: res.atom_is_hydrogen(idx))\n",
+    "        return self.matching_indices(lambda res,idx: res.atom_name(idx).strip()[0]=='H')\n",
+    "    def non_hydrogen_indices(self):\n",
+    "        return self.matching_indices(lambda res,idx: res.atom_name(idx).strip()[0]!='H')\n",
     "    \n",
     "    def matching_indices(self,atom_selector):\n",
     "        # Atom Selector expects 2 parameters - 1 residue object and 1 atom index (int) and outputs True (select) / False (don't select)\n",
@@ -262,7 +279,10 @@
    "source": [
     "def hydrogen_indices(pose):\n",
     "    if type(pose)==rosetta.core.pose.Pose: pose=LoadedPDB(pose)\n",
-    "    return pose.hydrogen_indices()"
+    "    return pose.hydrogen_indices()\n",
+    "def non_hydrogen_indices(pose):\n",
+    "    if type(pose)==rosetta.core.pose.Pose: pose=LoadedPDB(pose)\n",
+    "    return pose.non_hydrogen_indices()"
    ]
   },
   {
@@ -310,16 +330,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def align_poses(ref_struct,pose_struct,max_iter=12000,step_size=2e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True):\n",
+    "def align_poses(ref_struct,pose_struct,max_iter=12000,step_size=2e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True,use_selection_ref=None,use_selection_pose=None):\n",
     "    ref=get_torch_rep(ref_struct,ignore_Hs=False)\n",
     "    pose=get_torch_rep(pose_struct,ignore_Hs=False)\n",
     "\n",
     "    selection=None\n",
-    "    if ignore_Hs:\n",
-    "        selection_pose=torch.ones(len(pose),dtype=torch.bool)\n",
-    "        selection_pose[hydrogen_indices(pose_struct)]=False\n",
-    "        selection_ref=torch.ones(len(ref),dtype=torch.bool)\n",
-    "        selection_ref[hydrogen_indices(ref_struct)]=False\n",
+    "    if ignore_Hs or (selection_pose is not None) or (selection_ref is not None):\n",
+    "        if selection_pose is None:\n",
+    "            selection_pose=torch.ones(len(pose),dtype=torch.bool)\n",
+    "            if ignore_Hs: selection_pose[hydrogen_indices(pose_struct)]=False\n",
+    "        if selection_ref is None:\n",
+    "            selection_ref=torch.ones(len(ref),dtype=torch.bool)\n",
+    "            if ignore_Hs: selection_ref[hydrogen_indices(ref_struct)]=False\n",
     "        selection=True\n",
     "    \n",
     "    pose.requires_grad_(False)\n",
