Quick bug-fix + quicker alignment

--- a/PyRosetta/General.ipynb
+++ b/PyRosetta/General.ipynb
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def align_poses(ref_struct,pose_struct,max_iter=12000,step_size=2e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True,use_selection_ref=None,use_selection_pose=None):\n",
+    "def align_poses(ref_struct,pose_struct,max_iter=2000,step_size=6e-2,metric=lambda v1,v2: torch.mean(torch.sum((v1-v2)**2,dim=-1),dim=0),silent=False,printevery=200,ignore_Hs=True,selection_ref=None,selection_pose=None):\n",
     "    ref=get_torch_rep(ref_struct,ignore_Hs=False)\n",
     "    pose=get_torch_rep(pose_struct,ignore_Hs=False)\n",
     "\n",
