--- a/examples/TMaMD_PostProcess.ipynb
+++ b/examples/TMaMD_PostProcess.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c4710749-e1a1-4ff6-9103-711b5c02a441",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        " 'rosetta']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "325c3702-8b57-4b4e-aa5d-5972b43c3fb3",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref_pose=LoadedPDB(ROOT_DIR+\"/rosetta/crystal_closest.pdb\")\n",
+    "ref_pose=LoadedPDB(ROOT_DIR+\"/rosetta/crystal_closest.pdb\") #Picks up the rosetta best crystal structure\n",
+    "# Note: You need to generate this by doing the rosetta analysis. Look at the Rosetta_PostProcess.ipynb file for this\n",
     "ANALYSIS_TYPE=\"rosetta\"\n",
     "ref_xyz=get_torch_rep(ref_pose,ignore_Hs=True).detach().cpu().numpy()"
    ]
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "ac7919c5-65c4-40d4-96bd-9177ecb1948c",
    "metadata": {},
    "outputs": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "f59987be-a498-4fe9-9be6-9b0ab1471d75",
    "metadata": {},
    "outputs": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "f029bd39-1df4-4661-af63-cdef65e5c098",
    "metadata": {},
    "outputs": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "3e82184c-d189-42e6-88a4-5ccd6d1360c6",
    "metadata": {},
    "outputs": [],
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "d031f9fe-a710-4cb3-9766-595b92b8f059",
    "metadata": {},
    "outputs": [],
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "1747e12d-5fa2-470c-9656-149127538ec0",
    "metadata": {},
    "outputs": [
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "77b0c88e-9b31-47b4-be30-ef7f1a9afd31",
    "metadata": {},
    "outputs": [],
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "00e9ef37-eb05-484e-9209-fc7a603bbba1",
    "metadata": {},
    "outputs": [
@@ -497,6 +498,117 @@
     "print(\"Minimums for each iteration:\")\n",
     "for it in range(len(minimums)):\n",
     "    print(it,np.round(minimums[it],3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34482c42-2ce7-4ed2-ba42-fc9272d1ed1a",
+   "metadata": {},
+   "source": [
+    "### Best structure for each iteration\n",
+    "This is to dump the best structure at each iteration (by RMSD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "11979fca-38a4-4135-8901-586af4301ac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TM_MD_best_expt.pdb\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Choose dump name based on analysis type\n",
+    "if ANALYSIS_TYPE==\"crystal\": outfile=\"TM_MD_best_expt.pdb\"\n",
+    "else: outfile=\"TM_MD_best_rosetta.pdb\"\n",
+    "print(outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "10243470-69ee-430e-9d8c-e035ebdb8154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum RMSD structure is at index: 9424\n",
+      "cluster61.xtc is the file with the best pose (by RMSD) for iteration iter0 \n",
+      "\n",
+      "Final RMSD: 16.80575997534062\n",
+      "Minimum RMSD structure is at index: 15737\n",
+      "cluster-1.xtc is the file with the best pose (by RMSD) for iteration iter1 \n",
+      "\n",
+      "Final RMSD: 18.735307472366628\n",
+      "Minimum RMSD structure is at index: 10587\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/venkata/micromamba/thermomaps/lib/python3.10/site-packages/MDAnalysis/coordinates/PDB.py:1153: UserWarning: Found no information for attr: 'formalcharges' Using default value of '0'\n",
+      "  warnings.warn(\"Found no information for attr: '{}'\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cluster-1.xtc is the file with the best pose (by RMSD) for iteration iter2 \n",
+      "\n",
+      "Final RMSD: 18.423951604008593\n",
+      "Minimum RMSD structure is at index: 15450\n",
+      "cluster-1.xtc is the file with the best pose (by RMSD) for iteration iter3 \n",
+      "\n",
+      "Final RMSD: 18.54599699638771\n",
+      "Minimum RMSD structure is at index: 18578\n",
+      "cluster-1.xtc is the file with the best pose (by RMSD) for iteration iter4 \n",
+      "\n",
+      "Final RMSD: 17.71405271640738\n",
+      "Minimum RMSD structure is at index: 4391\n",
+      "cluster-1.xtc is the file with the best pose (by RMSD) for iteration iter5 \n",
+      "\n",
+      "Final RMSD: 17.130750906388883\n",
+      "Minimum RMSD structure is at index: 7645\n",
+      "cluster-1.xtc is the file with the best pose (by RMSD) for iteration iter6 \n",
+      "\n",
+      "Final RMSD: 18.03366341106727\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,it in enumerate(iter_fols):\n",
+    "    minstruct_idx=np.argmin(raw_data[i])\n",
+    "    print(\"Minimum RMSD structure is at index:\",minstruct_idx)\n",
+    "\n",
+    "    # Recall the order in which clusters were loaded\n",
+    "    cluster_ids=np.load(ROOT_DIR+\"/\"+it+\"/cluster_ids.npy\")\n",
+    "    req_id=minstruct_idx\n",
+    "    for cluster in cluster_ids:\n",
+    "        traj=mda.coordinates.XTC.XTCReader(ROOT_DIR+\"/\"+it+\"/mount/xtc/\"+cluster)\n",
+    "        # Skip each cluster until the one with the best structure is found\n",
+    "        req_id-=len(traj)\n",
+    "\n",
+    "        # When the cluster is found - Stop\n",
+    "        if req_id<0: break\n",
+    "    else:\n",
+    "        print(\"ERR: Search failed\")\n",
+    "        raise ValueError(\"Structure was not found on iteration \"+str(it))\n",
+    "    print(cluster,\"is the file with the best pose (by RMSD) for iteration\",it,\"\\n\")\n",
+    "    print(\"Final RMSD:\",align.rms.rmsd(traj[req_id].positions[md_sel],ref_xyz,superposition=True))\n",
+    "\n",
+    "    # Save the structure\n",
+    "    template_frame.atoms.positions=traj[req_id].positions\n",
+    "    mda.Writer(ROOT_DIR+\"/\"+it+\"/\"+outfile,multiframe=False).write(template_frame)"
    ]
   },
   {
@@ -627,7 +739,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
+   "id": "9969478c-077a-4c9a-b2ee-67dc08c42ee3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ANALYSIS_TYPE=\"crystal\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "8b6c0b59-44d2-4157-bac1-02caa4d74780",
    "metadata": {},
    "outputs": [],
@@ -639,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "0246c5aa-9ae0-4884-807d-c695f6d196ae",
    "metadata": {},
    "outputs": [
