Added info text

--- a/examples/Generate_Baseline.ipynb
+++ b/examples/Generate_Baseline.ipynb
@@ -161,6 +161,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e1cfa454-bb2e-4d1b-8822-2aeff5740965",
+   "metadata": {},
+   "source": [
+    "### The baseline generation\n",
+    "This process generates a LOT of poses using random monte-carlo moves. This can take quite a while to run."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "9715c1e8-64a9-4913-9e56-1a1c2c1d9779",
