Rosetta Postprocess now aligns the best crystal structure before saving it. No need for alignment in visualization software!

--- a/examples/Rosetta_PostProcess.ipynb
+++ b/examples/Rosetta_PostProcess.ipynb
@@ -1665,7 +1665,10 @@
    "outputs": [],
    "source": [
     "# Save the RMSDs\n",
-    "np.save(ROOT_DIR+\"/rosetta/RMSD_crystal.npy\",resolved_rmsds)"
+    "np.save(ROOT_DIR+\"/rosetta/RMSD_crystal.npy\",resolved_rmsds)\n",
+    "\n",
+    "# Print out the lowest RMSD\n",
+    "print(\"Lowest RMSD:\",np.min(resolved_rmsds))"
    ]
   },
   {
@@ -1695,7 +1698,10 @@
    ],
    "source": [
     "best_rosetta=poses[np.argmin(resolved_rmsds)]\n",
-    "best_rosetta.dump_pdb(ROOT_DIR+\"/rosetta/crystal_closest.pdb\")"
+    "\n",
+    "# Align the closest match to the crystal structure and save it\n",
+    "aligned_best_rosetta=align_poses(ref_pose,best_rosetta,silent=True,max_iter=5000)\n",
+    "aligned_best_rosetta.dump_pdb(ROOT_DIR+\"/rosetta/crystal_closest.pdb\")"
    ]
   }
  ],
