Made PerturbationSequence iterable

--- a/PyRosetta/RNAFolder.ipynb
+++ b/PyRosetta/RNAFolder.ipynb
@@ -137,6 +137,14 @@
     "\n",
     "    def __len__(self): return len(self.sequence)\n",
     "\n",
+    "    def __iter__(self):\n",
+    "        self.current_move=0\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        self.current_move+=1\n",
+    "        if self.current_move>=len(self): raise StopIteration()\n",
+    "        else: return self.sequence[self.current_move]\n",
+    "\n",
     "def generate_random_perturbations(pose,k=1):\n",
     "    # pose is LoadedPDB object\n",
     "    selids=(np.random.random((k,))*len(pose)).astype(int)+1\n",
