Added boxplot to PyRosetta Postprocessing

--- a/PyRosetta/RNAFolder.ipynb
+++ b/PyRosetta/RNAFolder.ipynb
@@ -108,7 +108,7 @@
     "    def __init__(self,rid,angid,delang):\n",
     "        self.residue_id=rid\n",
     "        self.angle_type=angid\n",
-    "        self.delta_angle=delang\n",
+    "        self.delta_angle=delang # In degrees (PyRosetta expects degrees)\n",
     "\n",
     "    def apply(self,pose,inverse=False):\n",
     "        if inverse: self.delta_angle*=-1\n",
