Added a GriddedData class to python libraries

--- a/python/General.ipynb
+++ b/python/General.ipynb
@@ -33,6 +33,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60deae72-476e-4e44-8e82-22a242ebd63e",
+   "metadata": {},
+   "source": [
+    "## Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96ffa4e-9a3e-442f-b7de-d0585da9125b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GriddedData:\n",
+    "    def __init__(self,grid,xvals=None,yvals=None,x_bounded=False,y_bounded=False):\n",
+    "        self.grid=grid\n",
+    "        if xvals is None: xvals=np.arange(len(self.grid))\n",
+    "        if yvals is None: yvals=np.arange(len(self.grid[0]))\n",
+    "        self.x_data=xvals\n",
+    "        self.y_data=yvals\n",
+    "        if x_bounded: self.x_data=(self.x_data[1:]+self.x_data[:-1])/2\n",
+    "        if y_bounded: self.y_data=(self.y_data[1:]+self.y_data[:-1])/2\n",
+    "        assert(len(self.x_data)==len(self.grid))\n",
+    "        assert(len(self.y_data)==len(self.grid[0]))\n",
+    "\n",
+    "    def __getitem__(self,idx_pair):\n",
+    "        x,y=idx_pair\n",
+    "        if x<self.x_data[0] or y<self.y_data[0]: raise ValueError(\"Requested (x,y) out of grid\")\n",
+    "        if x>=self.x_data[-1] or y>=self.y_data[-1]: raise ValueError(\"Requested (x,y) out of grid\")\n",
+    "        xidx=np.where(x<self.x_data)[0][0]\n",
+    "        yidx=np.where(y<self.y_data)[0][0]\n",
+    "        return self.grid[xidx,yidx]\n",
+    "    \n",
+    "    def draw(self,plt,num_ticks=7,**kwargs):\n",
+    "        plt.imshow(self.grid.T,**kwargs)\n",
+    "        plt.colorbar()\n",
+    "        step=int(len(self.x_data)//num_ticks)+1\n",
+    "        plt.xticks(np.arange(len(self.x_data))[::step],np.round(self.x_data,1)[::step])\n",
+    "        plt.yticks(np.arange(len(self.y_data))[::step],np.round(self.y_data,1)[::step])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0eee68d8",
@@ -59,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
