get_TMaMD_files now also gets the multitraj. python/General is now improved with a GriddedData object that can compute interpolated values on a 2D grid

--- a/python/General.ipynb
+++ b/python/General.ipynb
@@ -59,13 +59,26 @@
     "        assert(len(self.x_data)==len(self.grid))\n",
     "        assert(len(self.y_data)==len(self.grid[0]))\n",
     "\n",
-    "    def __getitem__(self,idx_pair):\n",
+    "    def get_index_of(self,idx_pair):\n",
     "        x,y=idx_pair\n",
     "        if x<self.x_data[0] or y<self.y_data[0]: raise ValueError(\"Requested (x,y) out of grid\")\n",
     "        if x>=self.x_data[-1] or y>=self.y_data[-1]: raise ValueError(\"Requested (x,y) out of grid\")\n",
     "        xidx=np.where(x<self.x_data)[0][0]\n",
     "        yidx=np.where(y<self.y_data)[0][0]\n",
+    "        return xidx,yidx\n",
+    "        \n",
+    "    def __getitem__(self,idx_pair):\n",
+    "        xidx,yidx=self.get_index_of(idx_pair)\n",
     "        return self.grid[xidx,yidx]\n",
+    "\n",
+    "    def get_interpolate(self,idx_pair):\n",
+    "        xidx,yidx=self.get_index_of(idx_pair)\n",
+    "        alpha_x=(idx_pair[0]-self.x_data[xidx-1])/(self.x_data[xidx]-self.x_data[xidx-1])\n",
+    "        alpha_y=(idx_pair[1]-self.y_data[yidx-1])/(self.y_data[yidx]-self.y_data[yidx-1])\n",
+    "        assert (alpha_x<1 and alpha_x>0)\n",
+    "        assert (alpha_y<1 and alpha_y>0)\n",
+    "        #print(xidx,yidx,alpha_x,alpha_y)\n",
+    "        return self.grid[xidx-1,yidx-1]*(1-alpha_x)*(1-alpha_y)+self.grid[xidx-1,yidx]*(1-alpha_x)*alpha_y+self.grid[xidx,yidx-1]*alpha_x*(1-alpha_y)+self.grid[xidx,yidx]*alpha_x*alpha_y\n",
     "    \n",
     "    def draw(self,plt,num_ticks=7,**kwargs):\n",
     "        plt.imshow(self.grid.T,**kwargs)\n",
